tests/fixtures/invalid/pow_none_str_set.py
# Cannot call pow() with None, Str, Set[int]
x = pow(None, "hello", {1, 2, 3})
